--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "highlightjs": "^8.7.0",
     "shower-core": "^2.0.4",
-    "shower-material": "^1.0.3"
+    "shower-material": "^1.0.3",
+    "taucharts": "^0.8.2"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
